updata tabs style

--- a/css/tabs.html
+++ b/css/tabs.html
@@ -140,7 +140,7 @@
 	    </div>
 	  </div>
 	  <div class="tabs-striped tabs-color-assertive">
-	    <div class="tabs">
+	    <div class="tabs" style="position:static;">
 	      <a class="tab-item active" href="#">
 	        <i class="icon ion-home"></i>
 	        Test
