update top on-swipe-right

--- a/css/header.html
+++ b/css/header.html
@@ -1,4 +1,4 @@
-<ion-view title="导航栏/Header" on-swipe-up="warn_up()" on-swipe-down="warn_down()">
+<ion-view title="导航栏/Header" on-swipe-up="warn_up()" on-swipe-down="warn_down()" on-swipe-right="warn_down()">
   
   <ion-content class="bar-top">
     <div class="bar bar-header bar-dark">
@@ -142,5 +142,4 @@
 </div>
 </xmp>
   </ion-content>
-
 </ion-view>
