--- a/css/content.html
+++ b/css/content.html
@@ -1,4 +1,4 @@
-<ion-view title="内容/content" on-swipe-up="warn_up()" on-swipe-down="warn_down()">
+<ion-view title="内容/content" on-swipe-up="warn_up()" on-swipe-down="warn_down()" on-swipe-right="warn_down()">
   
   <ion-content class="bar-top">
     <div class="bar bar-header bar-dark">
