--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <script src="./lib/js/ionic.bundle.min.js"></script>
 
     <link rel="stylesheet" type="text/css" href="./lib/css/ionic.min.css">
+    <link rel="stylesheet" type="text/css" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
     <link href="./lib/css/style.css" rel="stylesheet">
   </head>
   <body ng-controller="MainCtrl">
