--- a/ionicons.html
+++ b/ionicons.html
@@ -1,6 +1,9 @@
 <ion-view view-title="ionicons" on-swipe-up="warn_up()" on-swipe-down="warn_down()" on-swipe-right="warn_down()">
   <ion-content class="bar-top">
-  <br/><br/>
+    <div class="bar bar-header bar-dark">
+      <h1 class="title">{{nav_header}}</h1>
+    </div>
+    
     <ul class="list font_big">
       <li class="item ion-ionic" data-pack="default" data-tags="badass, framework, sexy, hawt"></li>
       <li class="item ion-arrow-up-a" data-pack="default" data-tags=""></li>
